WIP: Added sample parameters files. Prevent race condition in cloudfront-oai custom resource.

--- a/template/cloudfront-oai.template
+++ b/template/cloudfront-oai.template
@@ -11,6 +11,7 @@ Resources:
 
   CreateOAI:
     Type: AWS::Lambda::Function
+    DependsOn: LambdaRolePolicies
     Properties:
       FunctionName: create-cf-origin-access-identity
       Runtime: python2.7
