--- a/template/live-site.template
+++ b/template/live-site.template
@@ -46,9 +46,7 @@ Resources:
         - DomainName: !Sub live.${DomainName}.s3.amazonaws.com
           Id: live-s3-origin
           S3OriginConfig:
-             OriginAccessIdentity: !Sub origin-access-identity/cloudfront/${OriginAccessId} #origin-access-identity/cloudfront/E3G6KARSXLIZJA #!Sub
-#               - origin-access-identity/cloudfront/${OAI}
-#               - OAI: !GetAtt CloudFrontOAI.id
+             OriginAccessIdentity: !Sub origin-access-identity/cloudfront/${OriginAccessId}
         Enabled: true
         HttpVersion: http2
         # IsIPV6Enabled: true
@@ -59,9 +57,6 @@ Resources:
           - !Sub www.${DomainName}
         DefaultRootObject: index.html
         Comment: !Sub Distribution for ${DomainName} and www.${DomainName}
-#          !Join
-#            - ' '
-#            - !Ref AllDomainNames
         DefaultCacheBehavior:
           TargetOriginId: live-s3-origin
           Compress: true
@@ -70,10 +65,10 @@ Resources:
           ViewerProtocolPolicy: redirect-to-https
         PriceClass: PriceClass_100
         ViewerCertificate:
-#          AcmCertificateArn: !Ref AcmCertArn
-#          MinimumProtocolVersion: TLSv1
-#          SslSupportMethod: sni-only
-          CloudFrontDefaultCertificate: true
+          AcmCertificateArn: !Ref AcmCertArn
+          MinimumProtocolVersion: TLSv1
+          SslSupportMethod: sni-only
+#          CloudFrontDefaultCertificate: true
         WebACLId: !If [UseWAFActivated, !Ref WebACLId, !Ref "AWS::NoValue"]
         Logging:
           Bucket: !Sub ${CloudFrontAccessLogBucket}.s3.amazonaws.com
@@ -81,7 +76,7 @@ Resources:
 
   PrdS3Bucket:
     Type: AWS::S3::Bucket
-    DeletionPolicy: Delete
+    DeletionPolicy: Retain
     Properties:
       BucketName: !Sub live.${DomainName}
       WebsiteConfiguration:
@@ -102,7 +97,7 @@ Resources:
             Principal:
               CanonicalUser: !Ref S3CanonicalUserId
 
-  baseRecordSet:
+  wwwRecordSet:
     Type: AWS::Route53::RecordSet
     Properties:
       HostedZoneName: !Sub ${DomainName}.
@@ -113,12 +108,12 @@ Resources:
       Name: !Sub www.${DomainName}.
       Type: A
 
-  wwwRecordSet:
+  baseRecordSet:
     Type: AWS::Route53::RecordSet
     Properties:
       HostedZoneName: !Sub ${DomainName}.
       AliasTarget:
-        HostedZoneId: Z2FDTNDATAQYW2 # CloudFront
+        HostedZoneId: Z2FDTNDATAQYW2 # CloudFront hosted zone
         DNSName: !GetAtt CfDistribution.DomainName
       Comment: DNS name for wwww.
       Name: !Sub ${DomainName}.
